<resources>
    <string name="app_name">JunNanodegreeApps</string>
    <string name="app_title">Jun\'s Nanodegree Apps</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BUGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
