<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.iexpress.hello.junnanodegreeapps.MainActivity"
        >


        <TextView
            android:id="@+id/app_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:text="@string/app_title"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:typeface="serif"/>

        <Button
            android:id="@+id/stock_hawk_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popular_movies_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@android:color/holo_orange_light"
            android:onClick="showToast"
            android:text="@string/stock_hawk"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stock_hawk_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:onClick="showToast"
            android:background="@android:color/holo_orange_light"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/make_your_app_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/build_it_bigger"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@android:color/holo_orange_light"
            android:onClick="showToast"
            android:text="@string/make_your_app_material"/>

        <Button
            android:id="@+id/go_ubiquitous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/make_your_app_material_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@android:color/holo_orange_light"
            android:onClick="showToast"
            android:text="@string/go_ubiquitous"
            />

        <Button
            android:id="@+id/popular_movies_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/app_title_textview"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@android:color/holo_orange_light"
            android:onClick="showToast"
            android:text="@string/popular_movies"/>

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/go_ubiquitous_button"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@android:color/holo_orange_light"
            android:onClick="showToast"
            android:text="@string/capstone"/>

    </RelativeLayout>
</ScrollView>
